# Sports-Data

./: README.md  pyproject.toml
sports_data/: match_events.ipynb
